--- a/styles/resultats.css
+++ b/styles/resultats.css
@@ -199,7 +199,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: nav-box 600ms ease-in-out;
+    animation: nav-box 450ms ease-in-out;
     height: auto;
     width: auto;
     position: initial;
@@ -227,10 +227,10 @@ main {
     background: var(--background-color);
 }
 .principal-content {
-    margin: 0 3%;
+    margin: 0 5%;
 }
 .section-principal {
-    padding-bottom: 4em;
+    padding-bottom: 5vh;
 }
 .titre-section {
     animation: transition 200ms both;
@@ -244,9 +244,10 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    padding: 5vh 0;
 }
 .article-resultat {
-    margin: 2vh 2vw;
+    margin: 0em 2em 4em 2em;
     width: 36%;
     min-width: 510px;
     background-color: var(--tertiaire-color);
