--- a/styles/categories.css
+++ b/styles/categories.css
@@ -189,7 +189,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: nav-box 600ms ease-in-out;
+    animation: nav-box 450ms ease-in-out;
     height: auto;
     width: auto;
     position: initial;
@@ -221,10 +221,10 @@ main {
     background: var(--background-color);
 }
 .principal-content {
-    margin: 0 3%;
+    margin: 0 5%;
 }
 .section-principal {
-    padding-bottom: 4em;
+    padding-bottom: 5vh;
 }
 .section-titre {
     animation: transition 200ms both;
@@ -254,7 +254,7 @@ main {
     justify-content: space-evenly;
     margin: 5vh 1em;
     border-radius: 70px 0px 70px 0px;
-    padding: 3em 10em 3em 10em;
+    padding: 5vh 10em;
     background-color: var(--tertiaire-color);
 }
 .article-cat {
