--- a/styles/grades.css
+++ b/styles/grades.css
@@ -190,7 +190,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: nav-box 600ms ease-in-out;
+    animation: nav-box 450ms ease-in-out;
     height: auto;
     width: auto;
     position: initial;
@@ -222,10 +222,10 @@ main {
     background: var(--background-color);
 }
 .principal-content {
-    margin: 0 3%;
+    margin: 0 5%;
 }
 .section-principal {
-    padding-bottom: 4em;
+    padding-bottom: 5vh;
 }
 .titre-section {
     animation: transition 200ms both;
@@ -240,6 +240,7 @@ main {
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
+    padding: 5vh 0;
 }
 .cadre-technique {
     width: 23%;
@@ -251,10 +252,10 @@ main {
     flex-direction: column;
     align-items: center;
     border-radius: 70px 0px 70px 0px;
-    margin: 2em 1em;
+    margin: 0em 2em 4em 2em;
 }
 .cadre-technique:hover {
-    animation: size 400ms ease-in-out;
+    animation: size 450ms ease-in-out;
     box-shadow: inset 0em 0em 5em 0em var(--quaternaire-color);
     opacity: 0.9;
     border-radius: 70px 0px 70px 0px;
