--- a/styles/medias.css
+++ b/styles/medias.css
@@ -44,10 +44,19 @@
 }
 @keyframes size {
     0% {
-        height: 490px;
+        transform: scale(1, 1);
+    }
+    25% {
+        transform: scale(1.25, 1.25);
+    }
+    50% {
+        transform: scale(1, 1);
+    }
+    75% {
+        transform: scale(1.25, 1.25);
     }
     100% {
-        height: 670px;
+        transform: scale(1, 1);
     }
 }
 @keyframes nav-box {
@@ -189,7 +198,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: nav-box 600ms ease-in-out;
+    animation: nav-box 450ms ease-in-out;
     height: auto;
     width: auto;
     position: initial;
@@ -221,10 +230,10 @@ main {
     background: var(--background-color);
 }
 .principal-content {
-    margin: 0 3%;
+    margin: 0 5%;
 }
 .section-principal {
-    padding-bottom: 4em;
+    padding-bottom: 5vh;
 }
 .section-titre {
     animation: transition 200ms both;
@@ -254,7 +263,7 @@ main {
     justify-content: space-between;
     margin: 5vh 1em;
     border-radius: 70px 0px 70px 0px;
-    padding: 2em;
+    padding: 5vh 2em;
     background-color: var(--tertiaire-color);
 }
 .liste img {
@@ -304,7 +313,7 @@ main {
     cursor: pointer;
 }
 .coeur:hover {
-    animation: size 500ms ease-in-out;
+    animation: size 450ms ease-in-out;
     color: darkred;
     font-weight: bold;
 }
