--- a/styles/membres.css
+++ b/styles/membres.css
@@ -29,6 +29,9 @@
     50% {
         opacity: 0;
     }
+    95% {
+        opacity: 0.4;
+    }
     100% {
         opacity: 1;
     }
@@ -190,7 +193,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: nav-box 600ms ease-in-out;
+    animation: nav-box 450ms ease-in-out;
     height: auto;
     width: auto;
     position: initial;
@@ -218,10 +221,10 @@ main {
     background: var(--background-color);
 }
 .principal-content {
-    margin: 0 3%;
+    margin: 0 5%;
 }
 .section-principal {
-    padding-bottom: 4em;
+    padding-bottom: 5vh;
 }
 .titre-section {
     animation: transition 200ms both;
@@ -236,6 +239,7 @@ main {
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
+    padding: 5vh 0;
 }
 .profil-equipe {
     width: 20%;
@@ -246,10 +250,10 @@ main {
     display: flex;
     flex-direction: column;
     border-radius: 70px 0px 70px 0px;
-    margin: 2em 1em;
+    margin: 0em 2em 4em 2em;
 }
 .profil-equipe:hover {
-    animation: size 400ms ease-in-out;
+    animation: size 450ms ease-in-out;
     box-shadow: inset 0em 0em 5em 0em var(--quaternaire-color);
     opacity: 0.9;
     border-radius: 70px 0px 70px 0px;
@@ -292,7 +296,7 @@ main {
     width: 1px;
 }
 .profil-equipe:hover .details-membre {
-    animation: loader 400ms linear;
+    animation: loader 450ms linear;
     display: flex;
     flex-direction: column;
     font-size: 1.2em;
@@ -302,18 +306,22 @@ main {
     width: auto;
 }
 .titre-groupe {
+    filter: opacity(0.7);
     color: var(--second-color);
 }
 .nom-groupe {
-    color: var(--quaternaire-color);
+    font-size: 0.9em;
+    color: var(--primaire-color);
     font-weight: bold;
     text-align: right;
 }
 .titre-classe {
+    filter: opacity(0.7);
     color: var(--second-color);
 }
 .position-classe {
-    color: var(--quaternaire-color);
+    font-size: 0.9em;
+    color: var(--primaire-color);
     font-weight: bold;
     text-align: right;
 }
@@ -323,10 +331,12 @@ main {
     margin: 2vh 0 0 0;
 }
 .titre-categorie {
+    filter: opacity(0.7);
     color: var(--second-color);
 }
 .position-categorie {
-    color: var(--quaternaire-color);
+    font-size: 0.9em;
+    color: var(--primaire-color);
     font-weight: bold;
     text-align: right;
 }
@@ -337,10 +347,11 @@ main {
 }
 .titre-rang {
     color: var(--second-color);
+    filter: opacity(0.7);
 }
 .position-rang {
-    display: flex;
-    color: var(--quaternaire-color);
+    font-size: 0.9em;
+    color: var(--primaire-color);
     font-weight: bold;
     text-align: right;
 }
@@ -355,9 +366,11 @@ main {
 }
 .titre-fonction {
     color: var(--second-color);
+    filter: opacity(0.7);
 }
 .club-fonction {
-    color: var(--quaternaire-color);
+    font-size: 0.9em;
+    color: var(--primaire-color);
     font-weight: bold;
     text-align: right;
 }
