--- a/styles/style.css
+++ b/styles/style.css
@@ -190,7 +190,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: nav-box 600ms ease-in-out;
+    animation: nav-box 450ms ease-in-out;
     height: auto;
     width: auto;
     position: initial;
@@ -218,10 +218,10 @@ main {
     background: var(--background-color);
 }
 .principal-content {
-    margin: 0 3%;
+    margin: 0 5%;
 }
 .section-principal {
-    padding-bottom: 4em;
+    padding-bottom: 5vh;
 }
 .titre-section {
     animation: transition 200ms both;
@@ -236,7 +236,7 @@ main {
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
-    margin: auto;
+    padding: 5vh 0;
 }
 .article {
     width: 20%;
@@ -247,10 +247,10 @@ main {
     display: flex;
     flex-direction: column;
     border-radius: 70px 0px 70px 0px;
-    margin: 2vh 1.5vw;
+    margin: 0em 2em 4em 2em;
 }
 .article:hover {
-    animation: size 400ms both;
+    animation: size 450ms both;
     box-shadow: inset 0em 0em 3em 0em var(--quaternaire-color);
     opacity: 0.9;
 }
