--- a/styles/results.css
+++ b/styles/results.css
@@ -257,8 +257,30 @@ main {
     padding: 5vh 10em;
     background-color: var(--tertiaire-color);
 }
+.nav-tableau {
+    text-decoration: none;
+    color: var(--secondaire-color);
+    font-weight: bold;
+    border: 2px solid var(--secondaire-color);
+    border-radius: 20px 0px 20px 0px;
+    margin: auto 0.3vw;
+    text-align: center;
+    cursor: pointer;
+    padding: 0.5vh 0.5vw;
+    font-size: 1.2em;
+}
+.nav-tableau:hover {
+    background-color: var(--primaire-color);
+    border: 2px solid var(--quaternaire-color);
+    color: var(--quaternaire-color);
+}
 .tableau {
     width: 100%;
+}
+.titre-tableau {
+    color: var(--primaire-color);
+    font-size: 2em;
+    padding-left: 1vw;
 }
 div.petits-tigres {
     background-color: var(--primaire-color);
@@ -267,10 +289,10 @@ div.petits-tigres {
 }
 .divTable.petits-tigres .divTableCell, .divTable.petits-tigres .divTableHead {
     border: 1px solid var(--tertiaire-color);
-    padding: 3px 2px;
+    padding: 6px 2px;
 }
 .divTable.petits-tigres .divTableBody .divTableCell {
-    font-size: 1em;
+    font-size: 1.3em;
     color: var(--tertiaire-color)
 }
 .divTable.petits-tigres .divTableRow:nth-child(even) {
@@ -284,7 +306,7 @@ div.petits-tigres {
     border-bottom: 2px solid #444444;
 }
 .divTable.petits-tigres .divTableHeading .divTableHead {
-    font-size: 1.3em;
+    font-size: 1.5em;
     font-weight: bold;
     color: #B10101;
     text-align: center;
