--- a/styles/grades.css
+++ b/styles/grades.css
@@ -1,12 +1,15 @@
-:root {
-    --primaire-color: #B10101;
-    --secondaire-color: #181818;
-    --tertiaire-color:  #F9F9F9;
-    --quaternaire-color: #EDC73E;
-    --font-color: #000;
-    --background-color: linear-gradient(to bottom, #181818 0%, #ED2527 50%, #F9F9F9 100%);
+@keyframes loader-grade {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
-@keyframes spinner {
+@keyframes spinner-grade {
     0% {
       transform: rotate(0deg);
     }
@@ -14,300 +17,13 @@
       transform: rotate(360deg);
     }
 }
-@keyframes sous-nav-visible {
-    0% {
-        transform: rotate(75deg);
-    }
-    100% {
-        transform: rotate(0deg);
-    }
-}
-@keyframes sous-liens-visible {
-    0% {
-        transform: translateY(-10vw);
-        opacity: 0;
-    }
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-@keyframes transition {
-    0% {
-        transform: translateX(-150vw);
-    }
-    100% {
-        transform: translateX(0);
-    }
-}
-@keyframes loader {
-    0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-@keyframes defilement {
-    0% {
-        transform: translateY(150vw);
-        opacity: 0;
-    }
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-@keyframes size {
+@keyframes size-grade {
     0% {
         height: 370px;
     }
     100% {
         height: 750px;
     }
-}
-@keyframes nav-box {
-    0% {
-        height: 1px;
-        opacity: 0;
-    }
-    50% {
-        opacity: 0;
-    }
-    95% {
-        height: 130px;
-        opacity: 0.4;
-    }
-    100% {
-        height: auto;
-        opacity: 1;
-    }
-}
-@font-face {
-    font-family: "j.d";
-    font-style: normal;
-    font-weight: 400;
-    src: url("../assets/fonts/jd/j.d.ttf");
-}
-* {
-    font-family: 'Rubik', 'sans-serif';
-    box-sizing: border-box;
-}
-::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-}
-::-webkit-scrollbar-thumb {
-    background: var(--secondaire-color);
-    border-radius: 5px;
-}
-::-webkit-scrollbar-thumb:hover {
-    box-shadow: inset 0em 0em 0.3em 0em var(--tertiaire-color);
-}
-::-webkit-scrollbar-track {
-    background: var(--background-color);
-    border-radius: 0px;
-    box-shadow: inset 0px 0px 0px 0px var(--secondaire-color);
-}
-body {
-    margin: 0;
-}
-header {
-    background-color: var(--secondaire-color);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 42vh;
-}
-.cadre-titre {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-    height: 32.5vh;
-}
-.logo-jcf {
-    margin-left: 5vw;
-    height: 71%;
-    width: 10%;
-}
-.titre {
-    display: flex;
-    align-self: center;
-    justify-content: center;
-    font-family: 'j.d', 'sans-serif';
-    width: 50%;
-    font-size: 8vh;
-    letter-spacing: 0.3em;
-    text-align: center;
-    margin: 2vh 0 0 0;
-    line-height: 12vh;
-    color: var(--tertiaire-color);
-}
-.logo-ffjda {
-    margin-right: 3vw;
-    height: 60%;
-    width: 10%;
-}
-nav {
-    margin: 3vh 0;
-    width: 95%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 4vh;
-}
-.naviguation {
-    text-decoration: none;
-    color: var(--tertiaire-color);
-    font-weight: bold;
-    border: 2px solid var(--tertiaire-color);
-    border-radius: 20px 0px 20px 0px;
-    margin: auto 0.3vw;
-    text-align: center;
-    cursor: pointer;
-    padding: 0.5vh 0;
-    z-index: 10;
-
-}
-.naviguation:hover {
-    background-color: var(--primaire-color);
-    border: 2px solid var(--quaternaire-color);
-}
-.page-active {
-    background-color: var(--primaire-color);
-    border: 2px solid var(--quaternaire-color);
-    color: var(--quaternaire-color);
-}
-.lien-nav {
-    text-decoration: none;
-    color: var(--tertiaire-color);
-    padding: 0 0.5vw;
-    font-size: 1.25em;
-}
-.naviguation:hover .lien-nav {
-    color: var(--quaternaire-color);
-}
-.lien-actif {
-    color: var(--quaternaire-color);
-    text-decoration: none;
-    padding: 0 0.5vw;
-    font-size: 1.25em;
-}
-.nav-rapide {
-    height: 1px;
-    left: 0;
-    overflow: hidden;
-    position: absolute;
-    top: -10000px;
-    width: 1px;
-    text-align: start;
-    padding: 1vh 0;
-}
-.naviguation:hover .nav-rapide {
-    animation: nav-box 450ms ease-in-out;
-    height: auto;
-    width: auto;
-    position: initial;
-    overflow: visible;
-}
-.nav-rapide:hover {
-    height: auto;
-    width: auto;
-    position: initial;
-    overflow: visible;
-}
-.lien-rapide {
-    text-decoration: none;
-    color: var(--tertiaire-color);
-    display: block;
-    padding: 1vh 0.5vw;
-    font-size: 1.20em;
-    max-width: 12vw;
-    word-wrap: break-word;
-}
-.lien-rapide:hover {
-    color: var(--quaternaire-color);
-}
-.rapide {
-    padding: 1vh 0.5vw;
-    font-size: 1.20em;
-}
-.cadre-nav-prim {
-    display: flex;
-}
-.cadre-position {
-    height: 1px;
-    left: 0;
-    overflow: hidden;
-    position: absolute;
-    top: -10000px;
-    width: 1px;
-}
-.cadre-nav-prim:hover .cadre-position {
-    animation: sous-nav-visible 450ms ease-in-out;
-    position: absolute;
-    height: 0;
-    top: auto;
-    left: auto;
-    width: auto;
-    overflow: initial;
-}
-.sous-nav {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    left: 12vw;
-    margin: 0;
-    padding: 0;
-    background-color: var(--primaire-color);
-    border: 2px solid var(--quaternaire-color);
-    border-radius: 20px 0 20px 0;
-}
-.cadre-sous-nav {
-    display: flex;
-    align-items: baseline;
-    padding: 0 0.5vw;
-}
-.liens-sous-nav {
-    height: 1px;
-    left: 0;
-    overflow: hidden;
-    position: absolute;
-    top: -10000px;
-    width: 1px;
-    text-align: right;
-}
-.cadre-sous-nav:hover .liens-sous-nav {
-    animation: sous-liens-visible 450ms ease-in-out;
-    height: auto;
-    width: auto;
-    overflow: initial;
-    position: initial;
-}
-.titre-sous-lien {
-    text-align: center;
-    font-size: 1.2em;
-    padding: 0 2vw;
-}
-main {
-    background: var(--background-color);
-}
-.principal-content {
-    margin: 0 5%;
-}
-.section-principal {
-    padding-bottom: 5vh;
-}
-.titre-section {
-    animation: transition 200ms both;
-    color: var(--tertiaire-color);
-    margin: auto;
-    font-size: 2em;
-    padding: 8vh 0vw 3vh 2vw;
 }
 .section-grades {
     animation: defilement 400ms both;
@@ -330,7 +46,7 @@ main {
     margin: 0em 2em 4em 2em;
 }
 .cadre-technique:hover {
-    animation: size 450ms ease-in-out;
+    animation: size-grade 450ms ease-in-out;
     box-shadow: inset 0em 0em 5em 0em var(--quaternaire-color);
     opacity: 0.9;
     border-radius: 70px 0px 70px 0px;
@@ -345,7 +61,7 @@ main {
     height: 150px;
 }
 .cadre-technique:hover .img-ceinture {
-    animation: spinner 450ms ease-in-out;
+    animation: spinner-grade 450ms ease-in-out;
 }
 .liste-techniques {
     display: flex;
@@ -372,7 +88,7 @@ main {
     width: 1px;
 }
 .cadre-technique:hover .details-techniques {
-    animation: loader 450ms ease-in-out;
+    animation: loader-grade 450ms ease-in-out;
     overflow: initial;
     position: initial;
     height: auto;
@@ -408,58 +124,4 @@ main {
 .lien-page:hover {
     color: var(--primaire-color);
     filter: opacity(1);
-}
-footer {
-    background-color: var(--tertiaire-color);
-    width: 100%;
-    height: 25vh;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.liens-off {
-    height: 15vh;
-    display: flex;
-    align-items: center;
-}
-.social {
-    padding: 0 0.5vw;
-    cursor: pointer;
-}
-.logo-lien-footer {
-    height: 10vh;
-    border-radius: 10px 0px 10px 0px;
-    background-color: transparent;
-}
-.logo-lien-footer:hover {
-    box-shadow: 3px 3px 5px 3px var(--quaternaire-color);
-}
-.moselle {
-    height: 10vh;
-    border-radius: 10px 0px 10px 0px;
-    border: 1px inset #019838;
-    background-color: transparent;
-}
-.moselle:hover {
-    box-shadow: 3px 3px 5px 3px var(--quaternaire-color);
-}
-.liste-contact {
-    color: var(--secondaire-color);
-    font-size: 1.2em;
-    list-style-type: disclosure-closed;
-    list-style-position: inside;
-}
-.contact-form {
-    text-decoration: none;
-    color: var(--secondaire-color);
-}
-.contact-form:hover, .contact:hover {
-    color: var(--primaire-color);
-}
-.icone-contact {
-    padding: 0 0.5em 0 1em;
-    font-size: 1.1em;
-}
-.icone-partenaire {
-    padding: 0 0.5em 0 1em;
 }
