--- a/styles/style.css
+++ b/styles/style.css
@@ -16,21 +16,10 @@
 }
 @keyframes transition {
     0% {
-        transform: translate(-150vw);
+        transform: translateX(-150vw);
     }
     100% {
         transform: translateX(0);
-    }
-}
-@keyframes loader {
-    0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
     }
 }
 @keyframes defilement {
@@ -41,14 +30,6 @@
     100% {
         transform: translateY(0);
         opacity: 1;
-    }
-}
-@keyframes size {
-    0% {
-        height: 490px;
-    }
-    100% {
-        height: 670px;
     }
 }
 @keyframes nav-box {
@@ -68,6 +49,26 @@
         opacity: 1;
     }
 }
+@keyframes sous-nav-visible {
+    0% {
+        transform: rotateX(90deg);
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        transform: rotateX(0deg);
+    }
+}
+@keyframes sous-liens-visible {
+    0% {
+        transform: rotateY(90deg);
+        opacity: 0;
+    }
+    100% {
+        transform: rotateY(0);
+        opacity: 1;
+    }
+}
 @font-face {
     font-family: "j.d";
     font-style: normal;
@@ -77,6 +78,7 @@
 * {
     font-family: 'Rubik', 'sans-serif';
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
     width: 10px;
@@ -214,6 +216,71 @@ nav {
 .lien-rapide:hover {
     color: var(--quaternaire-color);
 }
+.rapide {
+    padding: 1vh 0.5vw;
+    font-size: 1.20em;
+}
+.cadre-nav-prim {
+    display: flex;
+}
+.cadre-position {
+    height: 1px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: -10000px;
+    width: 1px;
+}
+.cadre-nav-prim:hover .cadre-position {
+    animation: sous-nav-visible 450ms ease-in-out;
+    position: absolute;
+    height: 0;
+    top: auto;
+    left: auto;
+    width: auto;
+    overflow: initial;
+}
+.sous-nav {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 12vw;
+    margin: 0;
+    padding: 0;
+    background-color: var(--primaire-color);
+    border: 2px solid var(--quaternaire-color);
+    border-radius: 20px 0 20px 0;
+}
+.cadre-sous-nav {
+    display: flex;
+    align-items: baseline;
+    padding: 0 0.5vw;
+}
+.liens-sous-nav {
+    height: 1px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: -10000px;
+    width: 1px;
+    text-align: right;
+}
+.cadre-sous-nav:hover .liens-sous-nav {
+    animation: sous-liens-visible 450ms ease-in-out;
+    height: auto;
+    width: auto;
+    overflow: initial;
+    position: initial;
+}
+.titre-sous-lien {
+    text-align: center;
+    font-size: 1.2em;
+    padding: 0 2vw;
+    color: var(--quaternaire-color);
+}
+.cadre-sous-nav:hover .titre-sous-lien {
+    transform: scale(1.25, 1.25);
+}
 main {
     background: var(--background-color);
 }
@@ -230,105 +297,62 @@ main {
     font-size: 2em;
     padding: 8vh 0vw 3vh 2vw;
 }
-.activites {
-    animation: defilement 400ms both;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    padding: 5vh 0;
+.section-titre-bis {
+    animation: transition 200ms both;
 }
-.article {
-    width: 20%;
-    min-width: 340px;
-    height: 490px;
-    background-color: var(--tertiaire-color);
-    padding: 1em;
-    display: flex;
-    flex-direction: column;
-    border-radius: 70px 0px 70px 0px;
-    margin: 0em 2em 4em 2em;
-}
-.article:hover {
-    animation: size 450ms both;
-    box-shadow: inset 0em 0em 3em 0em var(--quaternaire-color);
-    opacity: 0.9;
-}
-.img-activite {
-    width: 100%;
-    object-fit: cover;
-    height: 220px;
-    border-radius: 70px 0px 70px 0px;
-}
-.titre-article {
-    font-size: 1.6em;
-    color: var(--primaire-color);
-    font-weight: bold;
-    text-align: center;
+.titre-section-bis {
+    color: var(--tertiaire-color);
     margin: auto;
-    padding: 3% 7%;
+    font-size: 2em;
+    padding: 5vh 0vw 0vh 2vw;
 }
-.description-activite {
-    height: 1px;
-    left: 0;
-    overflow: hidden;
-    position: absolute;
-    top: -10000px;
-    width: 1px;
+.retour-gallerie {
+    margin: 0vh 2vw 0vh 2vw;
+    font-size: 4em;
+    color: var(--quaternaire-color);
 }
-.article:hover .description-activite {
-    animation: loader 400ms linear;
-    margin: auto;
-    padding: 10px 0%;
-    height: 190px;
-    text-align: justify;
-    font-size: 1.1em;
-    position: initial;
-    overflow: initial;
-    width: auto;
+.icone-retour {
+    margin-top: 3vh;
 }
-.heure-activite {
+.icone-retour:hover {
+    animation: spinner 450ms linear;
     color: var(--primaire-color);
-    font-weight: bold;
-    font-size: 1.2em;
-    margin: 0;
-    padding: 4% 0;
-}
-.article:hover .heure-activite {
-    animation: loader 400ms ease-in-out;
-}
-.prix {
-    margin: auto;
-    padding: 4% 0 1% 0;
-    font-size: 1.1em;
-}
-.article:hover .prix {
-    animation: loader 400ms ease-in-out;
-}
-strong {
-    color: var(--primaire-color);
-}
-.detail-prix {
-    margin: 0;
-    font-size: 1em;
-    padding-top: 5px;
-    filter: opacity(0.6);
-}
-.article:hover .detail-prix {
-    animation: loader 400ms ease-in-out;
 }
 footer {
     background-color: var(--tertiaire-color);
     width: 100%;
-    height: 25vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 3vh 0;
+}
+.liens-footer {
+    display: flex;
+    flex-direction: column;
+    width: 55%;
+}
+.titre-liens-footer {
+    font-size: 1.5em;
+    color: var(--primaire-color);
+    width: 30%;
+    text-align: start;
+    margin-right: 1vw;
+}
+.img-liens {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
 .liens-off {
     height: 15vh;
     display: flex;
     align-items: center;
+}
+.liens-contact {
+    align-self: center;
+}
+.liste-contact {
+    padding: 0;
 }
 .social {
     padding: 0 0.5vw;
@@ -341,6 +365,7 @@ footer {
 }
 .logo-lien-footer:hover {
     box-shadow: 3px 3px 5px 3px var(--quaternaire-color);
+    transform: scale(1.3, 1.3);
 }
 .moselle {
     height: 10vh;
@@ -350,12 +375,16 @@ footer {
 }
 .moselle:hover {
     box-shadow: 3px 3px 5px 3px var(--quaternaire-color);
+    transform: scale(1.3, 1.3);
 }
 .liste-contact {
     color: var(--secondaire-color);
     font-size: 1.2em;
     list-style-type: disclosure-closed;
     list-style-position: inside;
+}
+.contact {
+    padding-bottom: 1vh;
 }
 .contact-form {
     text-decoration: none;
