--- a/styles/results.css
+++ b/styles/results.css
@@ -17,7 +17,7 @@
     margin: auto 0.3vw;
     text-align: center;
     cursor: pointer;
-    padding: 0.5vh 0.5vw;
+    padding: 1vh 1vw;
     font-size: 1.2em;
 }
 .nav-tableau:hover {
@@ -25,8 +25,21 @@
     border: 2px solid var(--quaternaire-color);
     color: var(--quaternaire-color);
 }
+.nav-actif {
+    background-color: var(--primaire-color);
+    border: 2px solid var(--quaternaire-color);
+    color: var(--quaternaire-color);
+}
 .tableau {
     width: 100%;
+}
+.table-hidden {
+    height: 1px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: -10000px;
+    width: 1px;
 }
 .titre-tableau {
     color: var(--primaire-color);
