--- a/styles/encyclopedie.css
+++ b/styles/encyclopedie.css
@@ -63,3 +63,5 @@
     object-fit: cover;
     border-radius: 70px 0 70px 0;
 }
+@media screen and (max-width: 1024px){}
+@media screen and (max-width: 768px){}
