--- a/styles/gallerie.css
+++ b/styles/gallerie.css
@@ -100,3 +100,5 @@
 .link-media-saison:hover {
     color: var(--primaire-color);
 }
+@media screen and (max-width: 1024px){}
+@media screen and (max-width: 768px){}
