--- a/styles/actualites.css
+++ b/styles/actualites.css
@@ -166,3 +166,5 @@ h3 {
     color: var(--primaire-color);
     font-weight: bold;
 }
+@media screen and (max-width: 1024px){}
+@media screen and (max-width: 768px){}
