--- a/styles/agenda.css
+++ b/styles/agenda.css
@@ -49,3 +49,5 @@
     box-shadow: 0 1px 2px #C3C3C3;
     border: 10px outset var(--primaire-color);
 }
+@media screen and (max-width: 1024px){}
+@media screen and (max-width: 768px){}
