--- a/styles/fullcalendar.css
+++ b/styles/fullcalendar.css
@@ -129,9 +129,9 @@ html .fc,
 .fc-widget-header{
     border-bottom: 1px solid #EEE; 
 }	
-.fc-state-highlight { /* <td> today cell */ /* TODO: add .fc-today to <th> */
-	/* background: #fcf8e3; */
-}
+/*.fc-state-highlight { <td> today cell */ /* TODO: add .fc-today to <th> */
+	/* background: #fcf8e3; 
+}*/
 
 .fc-state-highlight > div > div.fc-day-number{
     background-color: #ff3b30;
@@ -396,9 +396,9 @@ table.fc-border-separate {
 	}
 	
 
-.fc-border-separate tr.fc-last td {
+/*.fc-border-separate tr.fc-last td {
 	
-}
+}*/
 .fc-border-separate .fc-week .fc-first{
     border-left: 0;
 }
@@ -656,3 +656,5 @@ table.fc-header{
     text-align: right;
     padding-right: 10px;
 }
+@media screen and (max-width: 1024px){}
+@media screen and (max-width: 768px){}
