--- a/styles/grades.css
+++ b/styles/grades.css
@@ -125,3 +125,5 @@
     color: var(--primaire-color);
     filter: opacity(1);
 }
+@media screen and (max-width: 1024px){}
+@media screen and (max-width: 768px){}
