--- a/styles/membres.css
+++ b/styles/membres.css
@@ -164,3 +164,5 @@
     font-weight: bold;
     text-align: right;
 }
+@media screen and (max-width: 1024px){}
+@media screen and (max-width: 768px){}
