--- a/styles/style.css
+++ b/styles/style.css
@@ -562,7 +562,7 @@ textarea:focus {
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 42vh;
+        height: auto;
     }
     .cadre-titre {
         display: flex;
@@ -608,16 +608,18 @@ textarea:focus {
         font-weight: bold;
         border: 2px solid var(--tertiaire-color);
         border-radius: 20px 0px 20px 0px;
-        margin: auto 0.3vw;
+        margin: auto -0.5vw;
         text-align: center;
         cursor: pointer;
         padding: 0.5vh 0;
         z-index: 10;
-    
+        transform: rotateZ(45deg);
     }
     .naviguation:hover {
+        min-width: 130px;
         background-color: var(--primaire-color);
         border: 2px solid var(--quaternaire-color);
+        transform: rotateZ(0);
     }
     .page-active {
         background-color: var(--primaire-color);
@@ -700,7 +702,7 @@ textarea:focus {
     }
     .sous-nav {
         position: relative;
-        left: 85px;
+        left: 125px;
         margin: 0;
         padding: 0;
         background-color: var(--primaire-color);
@@ -750,8 +752,8 @@ textarea:focus {
         animation: transition 200ms both;
         color: var(--tertiaire-color);
         margin: auto;
-        font-size: 2em;
-        padding: 8vh 0vw 3vh 2vw;
+        font-size: 1.5em;
+        padding: 5vh 0vw 1vh 4vw;
     }
     .section-titre-bis {
         animation: transition 200ms both;
@@ -759,12 +761,12 @@ textarea:focus {
     .titre-section-bis {
         color: var(--tertiaire-color);
         margin: auto;
-        font-size: 2em;
-        padding: 5vh 0vw 0vh 2vw;
+        font-size: 1.5em;
+        padding: 2vh 0vw 0vh 4vw;
     }
     .retour-gallerie {
-        margin: 0vh 2vw 0vh 2vw;
-        font-size: 4em;
+        margin: 0vh 1vw 0vh 4vw;
+        font-size: 3em;
         color: var(--quaternaire-color);
     }
     .icone-retour {
