--- a/styles/style.css
+++ b/styles/style.css
@@ -664,6 +664,7 @@ textarea:focus {
         background-color: var(--primaire-color);
         border: 2px solid var(--quaternaire-color);
         transform: rotateZ(0);
+        transition: all 200ms ease-in;
     }
     .page-active {
         background-color: var(--primaire-color);
