maquette version présentation v1.0 ok

--- a/styles/style.css
+++ b/styles/style.css
@@ -390,6 +390,7 @@ footer {
     display: flex;
     justify-content: space-around;
     width: 100%;
+    max-width: 700px;
 }
 .liens-off {
     display: flex;
